Updating to Coq 8.5

--- a/src/HMAC/Makefile
+++ b/src/HMAC/Makefile
@@ -9,7 +9,7 @@ coq: Makefile.coq
 	$(MAKE) -f Makefile.coq
 
 Makefile.coq: Makefile $(VS)
-	coq_makefile -I "../FCF" $(VS) -o Makefile.coq
+	coq_makefile -f _CoqProject $(VS) -o Makefile.coq
 
 clean:: Makefile.coq
 	$(MAKE) -f Makefile.coq clean
