Moving SplitVector into FCF directory so it is easier to reuse in other proofs.

--- a/src/HMAC/Makefile
+++ b/src/HMAC/Makefile
@@ -1,5 +1,5 @@
 
-MODULES := splitVector cAU hF HMAC_spec NMAC_to_HMAC GNMAC_PRF GHMAC_PRF HMAC_PRF 
+MODULES := cAU hF HMAC_spec NMAC_to_HMAC GNMAC_PRF GHMAC_PRF HMAC_PRF 
 
 VS      := $(MODULES:%=%.v)
 
