--- a/coq-fcf.opam
+++ b/coq-fcf.opam
@@ -18,7 +18,7 @@ cryptographic schemes in the computational model."""
 build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
-  "coq" {(>= "8.15" & < "8.16~") | (= "dev")}
+  "coq" {(>= "8.17") | (= "dev")}
 ]
 
 tags: [
